# controllers/review.controller.js
@@ -1,4 +1,4 @@
-const languagesRepository = require('../database/repositories/languages.repository');
+const reviewRepository = require('../database/repositories/review.repository');
 const dataBaseError = require('../controllers/errors/db.error');
 const validators = require('./validation');
 const {verifyToken, decodeToken} = require('./jwt/jwt');
@@ -6,18 +6,56 @@ const {getStatus} = require('./status/dataBase.status');
 const {getStatusAuth} = require('./status/auth.status');
 
 
-const getReview = async (token) => {
+const getReview = async (token, {id: movieId}) => {
     const { value, error } = verifyToken(token);
     const err = getStatusAuth(value, error);
-    if (value) {
-        const {value: {header}} = decodeToken(token);
-        console.log(header.id);
-    }
     if (error) return {error: err};
-    const {dbError, result} = await languagesRepository.getLanguages();
+    const {dbError, result} = await reviewRepository.getReview(movieId);
+    if (dbError) return { error: dataBaseError.dbError(dbError) };
     const data = getStatus(result);
-    if (dbError) return { error: { status: 500, data: { dbError } } };
     return { result: data };
 };
 
-module.exports = {getReview};
+const createReview = async (token, {movie_id: movieId, content}) => {
+    content = content.replace(/'/g, "`");
+    const { value, error } = verifyToken(token);
+    const err = getStatusAuth(value, error);
+    if (value) {
+        const {value: {header: {id: userId}}} = decodeToken(token);
+        const {dbError, result} = await reviewRepository.createReview(movieId, userId, content);
+        if (dbError) return { error: dataBaseError.dbError(dbError) };
+        const data = getStatus(result);
+        return { result: data };
+    }
+    return {error: err};
+};
+
+const updateReview = async (token, {movie_id: movieId, content}) => {
+    content = content.replace(/'/g, "`");
+    const { value, error } = verifyToken(token);
+    const err = getStatusAuth(value, error);
+    if (value) {
+        const {value: {header: {id: userId}}} = decodeToken(token);
+        const {dbError, result} = await reviewRepository.updateReview(movieId, userId, content);
+        if (dbError) return { error: dataBaseError.dbError(dbError) };
+        const data = getStatus(result);
+        return { result: data };
+    }
+    return {error: err};
+
+};
+
+const deleteReview = async (token, {id: movieId}) => {
+    const { value, error } = verifyToken(token);
+    const err = getStatusAuth(value, error);
+    if (value) {
+        const {value: {header: {id: userId}}} = decodeToken(token);
+        const {dbError, result} = await reviewRepository.deleteReview(movieId, userId);
+        if (dbError) return { error: dataBaseError.dbError(dbError) };
+        const data = getStatus(result);
+        return { result: data };
+    }
+    return {error: err};
+};
+
+module.exports = {getReview, createReview, updateReview, deleteReview};
